--- a/index.html
+++ b/index.html
@@ -24,41 +24,48 @@
           (k.async = 1),
           (k.src = r),
           a.parentNode.insertBefore(k, a)
-      })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js', 'ym')
+      })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js?id=105915496', 'ym')
 
       ym(105915496, 'init', {
+        ssr: true,
+        webvisor: true,
         clickmap: true,
-        trackLinks: true,
-        accurateTrackBounce: true,
         ecommerce: 'dataLayer',
+        accurateTrackBounce: true,
+        trackLinks: true,
       })
     </script>
-
+    <noscript
+      ><div>
+        <img
+          src="https://mc.yandex.ru/watch/105915496"
+          style="position: absolute; left: -9999px"
+          alt=""
+        /></div
+    ></noscript>
     <script type="text/javascript">
-      ;(function (m, e, t, r, i, k, a) {
-        m[i] =
-          m[i] ||
+      ;(function (e, x, pe, r, i, me, nt) {
+        ;(e[i] =
+          e[i] ||
           function () {
-            ;(m[i].a = m[i].a || []).push(arguments)
-          }
-        m[i].l = 1 * new Date()
-        for (var j = 0; j < document.scripts.length; j++) {
-          if (document.scripts[j].src === r) {
-            return
-          }
-        }
-        ;(k = e.createElement(t)),
-          (a = e.getElementsByTagName(t)[0]),
-          (k.async = 1),
-          (k.src = r),
-          a.parentNode.insertBefore(k, a)
-      })(window, document, 'script', 'https://cdn.varioqub.ru/config.js', '_ymab')
-
-      window.ymabConfig = {
-        metrikaId: 105915496,
-
-        minInitTime: 100,
-      }
+            ;(e[i].a = e[i].a || []).push(arguments)
+          }),
+          (me = x.createElement(pe)),
+          (me.async = 1),
+          (me.src = r),
+          (nt = x.getElementsByTagName(pe)[0]),
+          me.addEventListener('error', function () {
+            function cb(t) {
+              ;(t = t[t.length - 1]), 'function' == typeof t && t({ flags: {} })
+            }
+            Array.isArray(e[i].a) && e[i].a.forEach(cb)
+            e[i] = function () {
+              cb(arguments)
+            }
+          }),
+          nt.parentNode.insertBefore(me, nt)
+      })(window, document, 'script', 'https://abt.s3.yandex.net/expjs/latest/exp.js', 'ymab')
+      ymab('metrika.105915496', 'init' /*, {clientFeatures}, {callback}*/)
     </script>
   </head>
   <body>
