--- a/index.html
+++ b/index.html
@@ -35,14 +35,6 @@
         trackLinks: true,
       })
     </script>
-    <noscript
-      ><div>
-        <img
-          src="https://mc.yandex.ru/watch/105915496"
-          style="position: absolute; left: -9999px"
-          alt=""
-        /></div
-    ></noscript>
     <script type="text/javascript">
       ;(function (e, x, pe, r, i, me, nt) {
         ;(e[i] =
@@ -65,7 +57,7 @@
           }),
           nt.parentNode.insertBefore(me, nt)
       })(window, document, 'script', 'https://abt.s3.yandex.net/expjs/latest/exp.js', 'ymab')
-      ymab('metrika.105915496', 'init' /*, {clientFeatures}, {callback}*/)
+      ymab('metrika.105915496', 'init')
     </script>
   </head>
   <body>
